tests/negative/neg_pr1162_removed_goto.safe
package Neg_PR1162_Removed_Goto

   function Build returns Integer

      goto Done;
      return 0;
